--- a/assets/sass/components/_quotes.sass
+++ b/assets/sass/components/_quotes.sass
@@ -50,9 +50,12 @@
   .blockquote--centered &
     text-align: center
 
-  &_name
-    font-style: normal
-    font-weight: bold
+.blockquote__cite-name
+  font-style: normal
+  font-weight: bold
+
+.blockquote__cite-title
+  display: block
 
 // Pullquotes
 
