--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -4,6 +4,9 @@
   padding-bottom: var(--space-m)
   margin-top: var(--space-xl)
 
+  .home &
+    margin-top: 0
+
 .footer__heading
   margin-bottom: 0
 
