--- a/assets/sass/base/_common.sass
+++ b/assets/sass/base/_common.sass
@@ -40,9 +40,8 @@ figure
 img
   display: block
 
-.intro_p
+.content > .intro_p
   font-size: var(--step-1)
-  //font-weight: 600
 
   &--with-thumb
     align-self: end
