--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -9,7 +9,6 @@
 @import "base/_typography"
 @import "base/_common"
 @import "base/_grid"
-
 @import "base/_animations"
 @import "base/_colors"
 @import "base/_miscellania"
@@ -19,6 +18,7 @@
 @import "layout/_footer"
 
 @import "components/_card"
+@import "components/_forms"
 @import "components/_img"
 @import "components/_mast"
 @import "components/_meta"
@@ -26,6 +26,7 @@
 @import "components/_slide"
 
 @import "pages/_alumni"
+@import "pages/_donate"
 @import "pages/_home"
 @import "pages/_news"
 @import "pages/_story"
