--- a/assets/sass/pages/_donate.sass
+++ b/assets/sass/pages/_donate.sass
@@ -1,52 +1,102 @@
-.alumni-form__item
-  display: none
-  .html--no-js &
-    display: block
-
-.donation_form--alumni h3
-  margin-top: 0
-
-.donation_form
-  counter-reset: donation_fieldgroup-counter
+.donate-subheading
+  margin: var(--prose-top-gap) 0
+  font-weight: 300
   +respond("tablet-landscape")
-    margin-left: auto
-    margin-right: auto
-    max-width: 45em
-  +respond("desktop-wide")
-    max-width: 50em
+    grid-column: half-gutter-start / col 3
+  // +respond("desktop")
+  //   grid-column: main-start / col 3
 
+.donate-intro
+  +respond("tablet-landscape")
+    grid-column: col 3 / main-end
+  +respond("desktop")
+    grid-column: col 3 / main-end
 
-  &__fieldgroup
-    margin-bottom: $halfGutter
-    &--btn
-      text-align: center
+  p:first-child::first-line
+    font-variant: small-caps
 
-  &__simple_sub_heading
-    margin-bottom: scale(small)
+.donate-highlights
+  background: var(--secondary-lightest)
+  padding-top: var(--space-s)
+  padding-bottom: var(--space-s)
+  margin: var(--space-l) 0
+  +respond("tablet-landscape")
+    padding-top: 0
+    padding-bottom: 0
 
-  &__sub_heading
-    margin-bottom: $gutter
-    +respond("tablet-landscape")
-      margin-left: -2.25em
+.donate-highlight-item
+  margin-bottom: var(--space-s)
+  text-align: center
+  &:last-of-type
+    margin-bottom: 0
+  +respond("tablet-landscape")
+    border-right: 1px solid var(--secondary)
+    grid-column: span 2
+    margin-bottom: 0
+    padding-top: var(--space-m)
+    padding-bottom: var(--space-m)
+    &:first-of-type
+      grid-column: main-start / span 2
+    &:last-of-type
+      border-right: 0
 
-    &::before
-      content: counter(donation_fieldgroup-counter)
-      counter-increment: donation_fieldgroup-counter
-      display: inline-block
-      height: 1.25em
-      width: 1.25em
-      background: color("tertiary", "light")
-      border-radius: 100%
-      color: #fff
-      font-size: scale(h4)
-      line-height: 1.25em
-      margin-right: scale(x-small)
-      text-align: center
-      vertical-align: middle
-      float: left
+.donate-highlight-item__caption
+  display: block
+  font-style: italic
+  line-height: 1em
 
-  &__small_msg
-    font-size: scale(small)
+.donate-highlight-item__number
+  display: block
+  font-size: var(--step-2)
+  &--dollars::before
+    content: "$"
+
+.donate-other-options
+  margin-top: var(--space-xl)
+
+.donations-nav-link
+  +respond("tablet-landscape")
+    grid-column: col 3 / main-end
+
+.donations-nav-link__title
+  margin: var(--space-xs) 0
+
+.donations-nav-link__title a
+  display: block
+  &:after
+    content: "\27F6"
+    font-size: var(--step--1)
+    margin-top: calc(var(--step-0) - var(--step--1))
+    float: right
+    //color: var(--tertiary-lightest)
+    &:hover
+      color: var(--primary)
+
+.donate-form
+  background: var(--secondary-dark)
+  margin: var(--space-l) 0
+  padding-top: var(--space-l)
+  padding-bottom: var(--space-l)
+
+.donation_form__form
+  +respond("tablet-landscape")
+    grid-column: col 3 / main-end
+  +respond("desktop")
+    grid-column: col 3 / main-end
+
+.donation_form__fieldgroup
+  margin-bottom: var(--prose-bottom-gap)
+  &--btn
+    text-align: center
+
+.form__select--donate
+  width: 100%
+
+.donation__directed-input
+  width: 90%
+
+.donation_form__small_msg
+  font-size: var(--step--1)
 
 .donation_boxes
   display: flex
@@ -55,12 +105,11 @@
   flex-wrap: wrap
   +respond("tablet-landscape")
     margin: 0 auto
-    max-width: 22em
 
 .donation_box
   //border: 1px solid color(background, dark)
   //width: 50%
-  margin: 0 $halfGutter*.5 $halfGutter 0
+  margin: 0 var(--space-2xs) var(--space-2xs) 0
   flex: 1 1 48%
   flex-wrap: wrap
   +respond("tablet-portrait")
@@ -74,21 +123,21 @@
     &:checked
       + label
         background-color: hsla(54, 89%, 78.6%, 0.5)
-        border-color: color(accent, base)
+        border-color: var(--accent)
 
   &__label
-    border: 1px solid color(background, dark)
-    border-radius: scale(xx-small)
+    background: var(--secondary)
+    border: 1px solid var(--secondary-darker)
+    border-radius: .25em
     cursor: pointer
     display: block
-    //padding: 1em 0
     width: 100%
     transition: background-color 0.1s, border-color 0.1s
     text-align: center
     vertical-align: middle
 
   &__amt
-    font-size: scale(h2)
+    font-size: var(--step-1)
     //line-height: 1.25em
     display: inline-block
     padding: .5em 0
@@ -100,115 +149,51 @@
 
   &__currency
     display: inline-block
-    font-size: scale(small)
+    font-size: var(--step--1)
     vertical-align: super
 
   &__custom
     -webkit-appearance: none
     border: 0
     //border-bottom: 4px dashed color(background, dark)
-    font-family: $family-serif
-    font-size: scale(h2)
+    font-family: $font-sans-serif
+    font-size: var(--step-1)
     padding: .23em 0
     text-align: center
     height: 100%
     width: 5ch
 
 .donation_textarea
-  border-radius: scale(xx-small)
+  border-radius: var(--step--3)
   display: block
   width: 100%
   +respond("tablet-landscape")
-    margin: $halfGutter auto 0
+    margin: var(--space-xs) auto 0
     max-width: 22em
-
-.form__select
-  &--donate
-    display: block
-    resize: none
-    +respond("tablet-landscape")
-      margin: 0 auto
-      max-width: 22em
-  &--shop
-    margin-right: $gutter
-    +respond("tablet-landscape")
-      min-width: 18em
-
-.directed_donation_other,
-.donation_form_hidden_items
-  .html--js &
-    max-height: 0;
-    transition: max-height 0.5s ease-out;
-    overflow: hidden;
-    &--active
-      max-height: 50em;
-      transition: max-height 0.5s ease-in;
-
-.donation_form_hidden_items
-  .html--js &
-    padding-left: 3em
-    margin-left: -3em
-
-.donate-highlights
-  margin: -$gutter 0 $gutter 0
-  padding: $gutter $gutter $gutter2
-  +respond("tablet-landscape")
-    padding-left: 15%
-    padding-right: 0
-
-  &--wrapper
-    background: color("background","white")
-    display: grid
-    grid-column-gap: $halfGutter
-    padding: 0 0 $gutter 0
-    +respond("tablet-landscape")
-      grid-template-columns: 1fr 1fr 1fr
-      padding: 0
-      padding-right: $gutter
-
-.donate-highlights-card
-  display: grid
-  margin: 0
-  text-align: center
-  +respond("tablet-landscape")
-    border-right: 1px solid color("background","base")
-    grid-column-gap: $halfGutter
-    grid-template-columns: 1fr 3fr
-    padding: $gutter 0 $gutter 0
-    align-items: center
-    justify-content: center
-    &:last-of-type
-      border: none
-
-.donate-highlights__heading
-  display: inline-block
-  +respond("tablet-landscape")
-    text-align: left
-    line-height: 1em
-    margin-top: 0
-    padding-left: $gutter
-    a
-      display: block
-
-.highlights_list_item
-  margin: 0
-
-.highlights_list__item
-  text-align: center
-  dt
-    font-family: $family-sans-serif
-    font-size: scale("small")
-    margin: 0 0 scale("small")
-    line-height: scale("base")
-  dd
-    margin: 0
-    font-style: italic
-    margin-bottom: scale("xxx-small")
-    font-size: scale(h3)
-
-.highlights-number__number--dollar
-  &::before
-    content: "$"
-    font-size: .65em
-    margin-left: -.125em
-    vertical-align: top
+//
+// .form__select
+//   &--donate
+//     display: block
+//     resize: none
+//     +respond("tablet-landscape")
+//       margin: 0 auto
+//       max-width: 22em
+//   &--shop
+//     margin-right: $gutter
+//     +respond("tablet-landscape")
+//       min-width: 18em
+//
+// .directed_donation_other,
+// .donation_form_hidden_items
+//   .html--js &
+//     max-height: 0;
+//     transition: max-height 0.5s ease-out;
+//     overflow: hidden;
+//     &--active
+//       max-height: 50em;
+//       transition: max-height 0.5s ease-in;
+//
+// .donation_form_hidden_items
+//   .html--js &
+//     padding-left: 3em
+//     margin-left: -3em
