Update Alumni membership paypal button

--- a/layouts/alumni/join.html
+++ b/layouts/alumni/join.html
@@ -17,6 +17,15 @@
       <input type="hidden" name="currency_code" value="USD">
 
       <fieldset class="form__fieldset">
+        <input type="hidden" name="on0" value="Membership Type">
+        <label class="form__label" for="os0">Please select your membership type:</label>
+        <select class="form__select" name="os0">
+          <option value="Lifetime Membership">Lifetime Membership $100</option>
+          <option value="Annual Membership">Annual Membership $20</option>
+        </select>
+      </fieldset>
+
+      <fieldset class="form__fieldset">
         <input type="hidden" name="on1" value="Norwin Graduate?">
         <label class="form__label" for="os1">Are you a Norwin Graduate?</label>
         <select class="form__select" name="os1">
