Added turbo:render event listener for nav menu; random style tweaks

--- a/assets/sass/components/_card.sass
+++ b/assets/sass/components/_card.sass
@@ -98,9 +98,5 @@
   font-weight: normal
   margin: 0
   line-height: 1.414em
-
-.card__subheading_span
-  &::after
-    content: ";\00a0"
-  &:last-of-type::after
-    content: none
+  &_span
+    display: block
