--- a/layouts/partials/board-members.html
+++ b/layouts/partials/board-members.html
@@ -12,7 +12,7 @@
       <h6 class="card__subheading">
       {{ with .positions }}
         {{ range . }}
-          <span class="card__subheading_span">{{.}}</span>
+          <span class="card__subheading_span">{{.}}<br /></span>
         {{ end }}
       {{ end }}
       </h6>
