--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" data-turbo-permanent>
   <div class="header__inner">
     <button class="hamburger" type="button" role="button" aria-label="Menu" aria-controls="nav-overlay" aria-expanded="false" tabindex="0">
       <div class="hamburger__box">
