Adjust news list styles, pagination partial
No longer uses hugo's internal pagination partial for better
control of ellipses in pagination.

--- a/assets/sass/base/_common.sass
+++ b/assets/sass/base/_common.sass
@@ -11,6 +11,8 @@
   --layer-header: 110
   --layer-nav: 110
   --layer-header-inner: 120
+  // width of navbar on desktop width
+  --nav-width: 4em;
 
 body
   background: var(--secondary)
@@ -20,7 +22,6 @@ body
 
   &.nav-overlay-active
     overflow-y: hidden
-
 
 a
   color: var(--tertiary)
