--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -11,7 +11,6 @@
 @import "base/_grid"
 @import "base/_animations"
 @import "base/_colors"
-@import "base/_miscellania"
 
 @import "layout/_header"
 @import "layout/_nav"
@@ -22,6 +21,7 @@
 @import "components/_img"
 @import "components/_mast"
 @import "components/_meta"
+@import "components/_pagination"
 @import "components/_quotes"
 @import "components/_slide"
 
