--- a/layouts/news/list.html
+++ b/layouts/news/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   {{ $paginator := .Paginate (where .Data.Pages "Section" .Section) }}
 
-  <header class="mast grid">
+  <header class="mast mast--section-has-image grid">
     <h1 class="mast__title">{{ .Title }}</h1>
     {{ if and $paginator.HasNext (not $paginator.HasPrev) }}
       {{ .Content }}
@@ -11,17 +11,9 @@
   <section class="news-list grid">
     <div class="news-listings">
       {{ range $i, $e := $paginator.Pages }}
-        {{ if and (eq $i 0) (and $paginator.HasNext (not $paginator.HasPrev)) }}
-          {{/* First post on first page of pagination */}}
-          {{ partial "news-listing-item" (dict "context" . "class" "card--big-summary" "fullsummary" true) }}
-        {{ else }}
-          {{ partial "news-listing-item" (dict "context" . "fullsummary" false) }}
-        {{ end }}
+        {{ partial "news-listing-item" (dict "context" . "fullsummary" false) }}
       {{ end }}
-
-      {{ if gt $paginator.TotalPages 1 }}
-        {{ template "_internal/pagination.html" . }}
-      {{ end }}
+      {{ partial "pagination" . }}
     </section>
   </div>
 {{ end }}
